# shaarpec-python-client

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
shaarpec/: __init__.py  client.py  tasks.py  utils.py
