[tool.poetry]
name = "shaarpec"
version = "2.3.1"
description = "Client for SHAARPEC Analytics API."
authors = ["Erik G. Brandt <erik.brandt@shaarpec.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
oidcish = "^0.3.1"
anybadge = "^1.14.0"
anyio = "^3.6.2"
argon2-cffi = "^21.3.0"
argon2-cffi-bindings = "^21.2.0"
asttokens = "^2.2.1"
attrs = "^22.2.0"
Babel = "^2.12.1"
backcall = "^0.2.0"
background = "^0.2.1"
beautifulsoup4 = "^4.12.1"
bleach = "^6.0.0"
certifi = "^2022.12.7"
cffi = "^1.15.1"
charset-normalizer = "^3.1.0"
click = "^8.1.3"
debugpy = "^1.6.7"
decorator = "^5.1.1"
defusedxml = "^0.7.1"
dill = "^0.3.6"
ecdsa = "^0.18.0"
entrypoints = "^0.4"
ipywidgets = "7.6.5"
fastjsonschema = "^2.16.3"
pylint = "^2.17.2"
tqdm = "^4.65.0"
executing = "^1.2.0"
jupyterlab-widgets = "^3.0.7"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.2"
isort = "^5.12.0"
jupytext = "^1.14.5"
jupyterlab-code-formatter = "^1.6.0"
anybadge = "^1.14.0"
jupyterlab = "^3.6.3"
nbconvert = "^7.3.0"
pytest = "^7.2.2"
pandas = "^2.0.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
