[tool.poetry]
name = "shaarpec"
version = "2.5.0"
description = "Client for SHAARPEC Analytics API."
authors = ["Erik G. Brandt <erik.brandt@shaarpec.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
oidcish = "^1.0.1"
anybadge = "^1.14.0"
anyio = "^3.7.1"
argon2-cffi = "^21.3.0"
argon2-cffi-bindings = "^21.2.0"
asttokens = "^2.2.1"
attrs = "^23.1.0"
Babel = "^2.12.1"
backcall = "^0.2.0"
background = "^0.2.1"
beautifulsoup4 = "^4.12.2"
bleach = "^6.0.0"
certifi = "^2023.5.7"
cffi = "^1.15.1"
charset-normalizer = "^3.1.0"
click = "^8.1.3"
debugpy = "^1.6.7"
decorator = "^5.1.1"
defusedxml = "^0.7.1"
dill = "^0.3.6"
ecdsa = "^0.18.0"
entrypoints = "^0.4"
fastjsonschema = "^2.17.1"
tqdm = "^4.65.0"
executing = "^1.2.0"
jupyterlab-widgets = "^3.0.8"
ipywidgets = "^8.0.7"
pydantic = "^2.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
jupytext = "^1.14.7"
jupyterlab-code-formatter = "^2.2.1"
anybadge = "^1.14.0"
jupyterlab = "^4.0.2"
nbconvert = "^7.6.0"
pytest = "^7.4.0"
pandas = "^2.0.3"
numpy = "^1.25.0"
matplotlib = "^3.7.2"
ruff = "^0.0.277"
devtools = "^0.11.0"

[tool.ruff]
exclude = [".venv", "typings"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
